--- a/css/nav.css
+++ b/css/nav.css
@@ -19,6 +19,8 @@ background-color: aquamarine;
 }
 .container{
     display:flex;
+    position: relative;
+    z-index: 1;
     flex-direction: column;
     /* width: 100%; */
     /* height:100%; */
@@ -68,6 +70,10 @@ ul li{
     padding: 0px 0px 0px 4px ;
     font:9px "Nunito sans",Arial,sans-serif;
 }
+ul li a{
+    text-decoration: none;
+    color:#999999; ;
+}
 .wrap{
     display: flex;
     justify-content:space-evenly;
@@ -110,4 +116,56 @@ ul li{
 .over{
     display: flex;
     gap:30px;
+}
+section{
+  position: relative;
+   background-image: url("../images/bg_1.jpg.webp");
+   height: 100vh    ;
+   min-height: 550px;
+   position: relative;
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center center;
+   background-attachment: fixed;
+   z-index:0;
+   width:100%;
+
+}
+section::after{
+    content:"";
+    contain: "";
+    width: 100%;
+    height: 100%;
+    background-color:black;
+    opacity: .4;
+    top: 0px;
+    left:0px;
+    position: absolute;
+}
+.sub-container{
+    position: relative;
+    z-index: 1;
+}
+
+
+@media(max-width:480px){
+    .over ul li{
+      display:none;
+    }
+    .checkbtn {
+        display: block;
+
+    }
+
+.btn{
+    padding: 2px;
+    font-size:10px;
+    background-color: #ff414d;
+    border-radius:3px;
+    border: none;
+    outline: none;
+    margin-left: -2%;
+    margin-top: -1%;
+    color: white;
+}
 }
