--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,7 @@
     align-items: center;
     color:white;
     margin-top: 200px;
+    /* display:none; */
 }
 
 .textbox p{
@@ -76,6 +77,7 @@
 }
 .cont{
     display: grid;
+    /* display: none; */
 }
 h4{
     color: #ff414d;
@@ -91,10 +93,12 @@ h4{
 }
 .fine{
     display: flex;
+    /* display: none; */
 
 }
 .overalll{
     position:relative;
+    /* display: none; */
     /* display: flex; */
     width: 300px;
     height: 280px;
@@ -151,7 +155,8 @@ h4{
     margin: 30px;
     background-color: #ff414d;
     display: flex;
-    height:100%
+    height:100%;
+    /* display: none; */
 }
 .overal img{
     width: 375px;
@@ -186,4 +191,130 @@ h4{
     margin-left: 12%;
     margin-top: 8%;
     color: white;
+}
+@media(max-width:480px){
+    
+.textbox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    margin-top: 200px;
+    /* display:none; */
+}
+.textbox p{
+    font: 20px "Nunito sans",Arial,sans-serif ;
+    /* font-weight: 1000; */
+    inline-size: 0.5;
+
+}
+.textbox h1{
+    font: 50px "Nunito sans",Arial,sans-serif ;
+    margin-top: 20px;
+    font-weight: 300;
+
+}
+.images img{
+    width:510px;
+    height: 300px;
+    margin-left: 10px;
+   
+}
+.types{
+    /* margin:40px 95px; */
+    font: 14px "Nunito sans",Arial,sans-serif ;
+    color: #ff414d ;
+}
+
+.contains{
+    display: grid;
+}
+.headings{
+    width:20px;
+    margin:0px 15px;
+    display:grid;
+    flex-direction: column;
+}
+.headings h1{
+    font-size: 20px;
+}
+ .headings .sope{
+    font-size:13px;
+    width: 350px;
+}
+
+.wraps{
+    display:grid;
+    grid-template-columns: 170px 1fr;
+
+    /* gap:-90px; */
+    margin-top: -90px;
+}
+.cont{
+    margin-top:115%;
+}
+.cont h4{
+    font-size: 13px;
+}
+.cont h1{
+    font-size: 16px;
+}
+.fine{
+    display:grid;
+    margin-left: 40px;
+    /* grid-gap:-10px; */
+    /* display: none; */
+
+}
+.overalll{
+    position:relative;
+    /* display: none; */
+    /* display: flex; */
+    width: 400px;
+    height: 280px;
+    border-radius: 10px;
+    margin-top: 50px;
+    margin-left:-10px;
+    background-color: rgb(245, 240, 240);
+    border-radius: 10px;
+}
+
+.overal{
+    margin: 30px;
+    background-color: #ff414d;
+    display:grid;
+    height:450px;
+    /* display: none; */
+}
+.overal img{
+    width:420px;
+    /* height:fit-content?; */
+    /* padding-top: 10px; */
+
+}
+.overa p{
+    font-size: 10px;
+    margin-top:10px;
+    margin-left:-40px ;
+}
+.overa h1{
+    font-size: 14px;
+    margin-top: 10px;
+    margin-left:-40px ;
+}
+.btns{
+    /* display: grid;? */
+    padding: 5px;
+    font-size:10px;
+    width: 150px;
+    background-color: #000000;
+    border-radius:3px;
+    border: none;
+    outline: none;
+    height: 50px;
+    margin-left:7%;
+    margin-top: 2%;
+    color: white;
+}
 }
