--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,6 @@
-
+body{
+    overflow-x: hidden;
+}
 .textbox{
     display: flex;
     flex-direction: column;
@@ -43,6 +45,7 @@
     margin:40px 95px;
     display: flex;
     flex-direction: column;
+    
 }
 .headings h1{
     margin-top: 15px;
@@ -50,10 +53,12 @@
 .sope{
     margin-top: 25px;
     color: rgb(120, 108, 108);
+    font-size: 20px;
 }
 .wraps{
     display: flex;
     gap:30px;
+    margin-top: 110px;
 }
 .overs{
     display: grid;
@@ -62,7 +67,7 @@
     width:150px;
     border-radius: 20px;
     padding:20px;
-    margin-top:130px;
+    /* margin-top:130px; */
     
 }
 .app{
@@ -77,6 +82,10 @@
 }
 .cont{
     display: grid;
+    margin-top: 20px;
+    /* background-color: gray; */
+ 
+    
     /* display: none; */
 }
 h4{
@@ -93,6 +102,7 @@ h4{
 }
 .fine{
     display: flex;
+    background-color: ;
     /* display: none; */
 
 }
@@ -103,7 +113,7 @@ h4{
     width: 300px;
     height: 280px;
     border-radius: 10px;
-    margin: 50px;
+    margin: 30px;
     background-color: rgb(245, 240, 240);
     border-radius: 10px;
 }
@@ -175,10 +185,17 @@ h4{
     color: white;
     margin-top:30px;
 }
+.pop{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+}
 .overa h1{
     font: "Nunito sans",Arial,sans-serif ;
     color: white;
     margin-top:30px;
+
 }
 .btns{
     padding: 9px;
@@ -191,6 +208,22 @@ h4{
     margin-left: 12%;
     margin-top: 8%;
     color: white;
+}
+
+#shine{
+    width:100%; 
+    border-radiuS:10PX;
+     /* background-color:gray; */
+    /* height:100%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10%;
+    margin: 30px 20px;
+
+
+
+
 }
 @media(max-width:480px){
     
@@ -216,7 +249,7 @@ h4{
 
 }
 .images img{
-    width:510px;
+    width:470px;
     height: 300px;
     margin-left: 10px;
    
@@ -249,10 +282,12 @@ h4{
     grid-template-columns: 170px 1fr;
 
     /* gap:-90px; */
-    margin-top: -90px;
+    margin-top: 50px;
 }
 .cont{
-    margin-top:115%;
+    margin-top:90%;
+    width: 100%;
+    /* height: 100vh; */
 }
 .cont h4{
     font-size: 13px;
@@ -284,11 +319,12 @@ h4{
     margin: 30px;
     background-color: #ff414d;
     display:grid;
+    width: 450px;
     height:450px;
     /* display: none; */
 }
 .overal img{
-    width:420px;
+    width:450px;
     /* height:fit-content?; */
     /* padding-top: 10px; */
 
@@ -316,5 +352,20 @@ h4{
     margin-left:7%;
     margin-top: 2%;
     color: white;
+}
+#shine{
+    /* width:100%;
+    border-radiuS:10px;
+    background-color:gray;
+    height:100% ;  */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-left: 20%; */
+    /* margin: 30px 20px; */
+
+
+
+
 }
 }
